2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* ExceptionBlockParser.cs, ExecutionBlock.cs, ExecutionPath.cs,
	ExecutionPathFactory.cs, SEHCatchBlock.cs, SEHGuardedBlock.cs, 
	SEHHandlerBlock.cs: Refactor to remove interfaces and use generic 
	collections (work in progress).
	* SEHHandlerBlockCollection.cs: Removed (generics are now used).

2008-05-03  Sebastien Pouliot  <sebastien@ximian.com>

	* ExecutionPath.cs: Refactor to simplify and use generics 
	fix ImplementGenericCollectionInterfacesRule defect on type.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* ExecutionPath.cs: Add Equals(ExecutionPath) method to satisfy 
	ImplementEqualsTypeRule. Renamed class to ExecutionPathCollection 
	to satisfy UseCorrectSuffixRule
	* ExecutionPathFactory.cs: Rename ExecutionPath to *Collection.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* SEHCatchBlock.cs: Seal internal class.
	* SEHGuardedBlock.cs: Seal internal class.
	* SEHHandlerBlockCollection.cs: Seal internal class. Rename some 
	parameters to match base class.

2008-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* ExceptionBlockParser.cs: Since we now compile with >= 2.0 changed
	this class to static.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExecutionPath.cs: Removed some unused code.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExecutionPath.cs: Handle the null argument in the Equals method.

2006-06-19  Russell Morris  <russell@russellsprojects.com>

	* Initial import of exception-management rule assembly