@@ -1,63 +1,54 @@
 using System;
 using System.Collections;
+using System.Collections.Generic;
 using Mono.Cecil;
 using Mono.Cecil.Cil;
 
 namespace Gendarme.Rules.Exceptions {
 
 	internal static class ExceptionBlockParser {
-	
-		public static SEHGuardedBlock[] GetExceptionBlocks (MethodDefinition method)
+
+		private static SEHGuardedBlock GetGuardedBlock (ExceptionHandler eh, Dictionary<Instruction, SEHGuardedBlock> blocks)
 		{
-			Hashtable blockStarts = new Hashtable ();
-			ExceptionHandlerCollection ehc = null;
-			
-			if (method.Body != null) {
-				ehc = method.Body.ExceptionHandlers;
-				// Parse the exception handlers now
-				foreach (ExceptionHandler eh in ehc) {
-					SEHGuardedBlock guardedBlock = null;
+			SEHGuardedBlock guardedBlock;
+			if (!blocks.TryGetValue (eh.TryStart, out guardedBlock)) {
+				guardedBlock = new SEHGuardedBlock (eh.TryStart, eh.TryEnd);
+				blocks.Add (eh.TryStart, guardedBlock);
+			}
+			return guardedBlock;
+		}
 
-					if (eh.Type == ExceptionHandlerType.Catch) {
-						if (!blockStarts.ContainsKey (eh.TryStart)) {
-							guardedBlock = new SEHGuardedBlock ();
-							guardedBlock.Start = eh.TryStart;
-							guardedBlock.End = eh.TryEnd;
-							blockStarts [eh.TryStart] = guardedBlock;
-						} else {
-							guardedBlock = (SEHGuardedBlock)
-								blockStarts [eh.TryStart];
-						}
+		public static ICollection GetExceptionBlocks (MethodDefinition method)
+		{
+			if (!method.HasBody)
+				return null;
 
-						SEHCatchBlock cb = new SEHCatchBlock ();
-						cb.ExceptionType = eh.CatchType;
-						cb.Start = eh.HandlerStart;
-						cb.End = eh.HandlerEnd;
-						cb.Type = SEHHandlerType.Catch;
-						guardedBlock.SEHHandlerBlocks.Add (cb);
-					}
-					else if (eh.Type == ExceptionHandlerType.Finally) {
-						if (!blockStarts.ContainsKey (eh.TryStart)) {
-							guardedBlock = new SEHGuardedBlock ();
-							guardedBlock.Start = eh.TryStart;
-							guardedBlock.End = eh.TryEnd;
-							blockStarts [eh.TryStart] = guardedBlock;
-						} else {
-							guardedBlock = (SEHGuardedBlock)blockStarts [eh.TryStart];
-						}
+			Dictionary<Instruction, SEHGuardedBlock> blockStarts = new Dictionary<Instruction, SEHGuardedBlock> ();
+			ExceptionHandlerCollection ehc = method.Body.ExceptionHandlers;
 
-						SEHHandlerBlock hb = new SEHHandlerBlock ();
-						hb.Start = eh.HandlerStart;
-						hb.End = eh.HandlerEnd;
-						hb.Type = SEHHandlerType.Finally;
-						guardedBlock.SEHHandlerBlocks.Add (hb);
-					}
+			// Parse the exception handlers now
+			foreach (ExceptionHandler eh in ehc) {
+				if (eh.Type == ExceptionHandlerType.Catch) {
+					SEHGuardedBlock guardedBlock = GetGuardedBlock (eh, blockStarts);
+
+					SEHCatchBlock cb = new SEHCatchBlock ();
+					cb.ExceptionType = eh.CatchType;
+					cb.Start = eh.HandlerStart;
+					cb.End = eh.HandlerEnd;
+					cb.Type = SEHHandlerType.Catch;
+					guardedBlock.SEHHandlerBlocks.Add (cb);
+				} else if (eh.Type == ExceptionHandlerType.Finally) {
+					SEHGuardedBlock guardedBlock = GetGuardedBlock (eh, blockStarts);
+
+					SEHHandlerBlock hb = new SEHHandlerBlock ();
+					hb.Start = eh.HandlerStart;
+					hb.End = eh.HandlerEnd;
+					hb.Type = SEHHandlerType.Finally;
+					guardedBlock.SEHHandlerBlocks.Add (hb);
 				}
 			}
-			
-			SEHGuardedBlock[] ret = new SEHGuardedBlock [blockStarts.Count];
-			blockStarts.Values.CopyTo (ret,0);
-			return ret;
+
+			return blockStarts.Values;
 		}
 	}
 }
